--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,7 +2,6 @@
 <head>
   <meta charset="utf-8">
   <title>WebSocket Demo</title>
-  <script src="js/main.js"></script>
 </head>
 <body>
   <h1>WebSocket Demo</h1>
@@ -15,6 +14,7 @@
     <button type="button" id="close">Close</button>
   </div>
   <div id="messages"></div>
-  <!-- <script src="js/app.js"></script> -->
+  <script src="js/main.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
