--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -14,7 +14,7 @@
     <button type="button" id="close">Close</button>
   </div>
   <div id="messages"></div>
-  <script src="js/main.js"></script>
+  <script src="js/compiled/main.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
